# mycode

apue/: 1-10  1-10.c  1-3  1-3.c  1-4  1-4.c  1-5  1-5.c  1-7  1-7.c  out
attribute/: test  test.c
autotools/: Makefile.am  configure.ac  itest.c
awk/: a  a.c  aaa  ipa  passwd  r  test1
base64/: base64.c  test
cJson/: a  a.c
caption7/: env  env.c  exit  exit.c
client/: CMakeCache.txt  CMakeLists.txt  Makefile  client  client.c  cmake_install.cmake  compile_commands.json
clone/: a  a.c  b  b.c
cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  dynamic_lib.c  hello  inc.h  main.c  obj.c
cpp/: a  a.asm
curl/: easy  easy.c  iqiyi  multi.c  qq
dbus/: CMakeLists.txt
dbus/.cache/clangd/index/: send.c.185CB4A9062F8A5A.idx
dbus/src/app/: recv.c  send.c
dir/: test  test.c
drm/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  drmtest  test.c
elf/: parse  parse.c
epoll_test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  config.c  config.ini  epoll_test  main.c
epoll_test/.cache/clangd/index/: main.c.009E0CE527CA4C4F.idx
fb/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.c
file_exists/: a.c
fileio/: a.c
ftp_proxy/: a.out  p.h  proxy  proxy.c
gdb_fork/: a  a.c
getip/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json
getip/.cache/clangd/index/: common.c.3467F441A6A37C29.idx  common.h.B02428392F15A330.idx  test.c.7327D17D9D50D7CF.idx  test.c.D2088A9DB79931E5.idx
getip/src/app/: test.c
getip/src/include/: common.h
getip/src/lib/: common.c
getss/: CMakeLists.txt  main.c
getss/.cache/clangd/index/: main.c.BD4BD74D67FDF750.idx
getss/.clangd/index/: main.c.BD4BD74D67FDF750.idx
getss/Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  getss
glib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  study  test.c
glib/.clangd/index/: ghash.c.C9463FAC0876A3FE.idx  glist.c.9138EBAE722372B7.idx  gslist.c.9E099EF9E4C52C22.idx  gstring.c.B6F37E44DBC548AC.idx  gtimer.c.ED30BDDD2F9F6979.idx  test.c.6FBD1389428B0441.idx
glob/: glob  glob.c
gmime/: a.c  b  b.c  c  c.c  compile_commands.json  makefile
gtk/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  main.c  test
gtk/.cache/clangd/index/: main.c.B576AF886C80B005.idx  main.c.D031FF20063E674A.idx
hyperscan/: compile_commands.json  makefile  simplegrep
iconv/: main  test.c
initcall_test/: README  doinitcall  doinitcall.c  link.lds
ipc/: fifo.c  fifo_read  fifo_read.c  fifo_write  fifo_write.c  msg_recv  msg_recv.c  msg_send  msg_send.c  pipe  pipe.c  shm  shm.c  shm_open  shm_open.c
iptransfrom/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  iptf  main.c
json-c/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  jsonc  test.c
json-c/.cache/clangd/index/: CMakeCCompilerId.c.6B6E9C355D199D4D.idx  CMakeCXXCompilerId.cpp.96E1FF27055B5149.idx  test.c.727D66CFB35AAD36.idx
json-c/.clangd/index/: test.c.727D66CFB35AAD36.idx
json-glib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  test  test.c
json-glib/.cache/clangd/index/: test.c.6C7938B1501B5F9D.idx
leetcode/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  test  test.c
leetcode/.cache/clangd/index/: test.c.C5D8816F8FE60ED5.idx
libxml/: compile_commands.json  makefile  parse  parse.c  parse.h  structxml.c
limit/: 1600242206-test-13230-18446744073709551615.core  test  test.c
mempool/: mempool  mempool.c
mmap/: tmp  tmp.c
module/: .hello.ko.cmd  .hello.mod.cmd  .hello.mod.o.cmd  .hello.o.cmd
ncurses/: CMakeLists.txt  hw  hw.c
ncurses/Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  main  ncruses_demo
ns/: uts  uts.c
openssl/: des_cbc  des_cbc.c  des_ecb  des_ecb.c  test  test.c
pcre/: a  a.c
ping/: main  main.c  ping.c  ping.h
presymbol/: a  a.c  makefile
pthread/: base.c  base_with_mutex  base_with_mutex.c  log  thread_cond  thread_cond.c
redirect/: a.c
regex/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  email.c  regex
sed/: test
semaphore/: CMakeLists.txt
semaphore/.cache/clangd/index/: common.h.067B63955E3F44B4.idx  common.h.B101D91E2E093883.idx  name_sem.c.063B962D60EC57B3.idx  name_sem.c.1BF6137E6758D146.idx  sem.c.5D0D05274FEC3E85.idx  semaphore.c.6678B60656641315.idx  semaphore.c.B78523012072D10F.idx  unname_sem.c.AD8DDF5C0ADA20EC.idx  unname_sem.c.B008E6D8CF9D6094.idx  xsi_sem.c.5484FCC7C15F86D5.idx  xsi_sem.c.FF972D5EABD9DB57.idx
semaphore/Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
semaphore/src/: common.h  name_sem.c  semaphore.c  unname_sem.c  xsi_sem.c
sendfile/: test  test.c
setproctitle/: main  main.c
sha1/: sha1.h  test.c
shell/: a.sh  err2  inputfile  log  test.sh
shm/: CMakeLists.txt
signal/: a  a.c
sockopt/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  main.c  sockopt
stdio/: a  a.c
string.h/: stringh  stringh.c
struct/: a  a.c  list  list.c  queue  queue.c  search  search.c  seqlist  seqlist.c  sort  sort.c  strmatch  strmatch.c
syslog/: syslog_kernel  syslog_kernel.c  syslog_user  syslog_user.c
tcp/: Makefile  client  client.c  server  server.c
termio/: CMakeLists.txt  main.c
test/: a  a.c  aa  aa.c  clang-a  gdbcmd  hello  hello.c  main  run.sh  t3  t3.c  test  test.asm  test.c  test.i  test2  test2.c  txt.txt
thread_sync/: aaa  aaa.c  gdbcmd  makefile  test  test.c
time/: main  main.c
timer/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  main.c  timer
tuntap/: tun  tun.c
xcb/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  main.c  test
(+59 files in other folders)
